align fix

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -117,7 +117,7 @@ header .container {
   border-radius: 10px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
 
   .togglemenu-button {
   display: flex;
